# webrtc

./: BUILD.gn  webrtc.gni
api/: peer_connection_interface.h
api/video/: video_frame.cc  video_frame.h
audio/: audio_send_stream.cc  audio_send_stream.h  channel_send.cc
build_overrides/: build.gni
call/: BUILD.gn  audio_send_stream.h  call.cc
examples/: BUILD.gn
examples/webrtc_learn/: main.cc
media/engine/: constants.cc  internal_encoder_factory.cc
modules/: BUILD.gn
modules/audio_coding/acm2/: acm_receiver.h  audio_coding_module.cc
modules/audio_coding/neteq/: neteq_impl.cc  neteq_impl.h
modules/recording/: BUILD.gn  recorder.cc  recorder.h
modules/video_coding/: BUILD.gn
modules/video_coding/codecs/h264/: h264_color_space.cc  h264_color_space.h  h264_decoder_impl.cc  h264_decoder_impl.h  h264_encoder_impl.cc  h264_encoder_impl.h
pc/: peer_connection.cc  peer_connection.h
sdk/libs/ffmpeg/: CONTROL
sdk/libs/ffmpeg/debug/lib/: avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
sdk/libs/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
sdk/libs/ffmpeg/share/ffmpeg/: vcpkg.spdx.json  vcpkg_abi_info.txt
video/: video_receive_stream.cc  video_receive_stream.h  video_receive_stream2.cc  video_receive_stream2.h  video_send_stream_impl.cc  video_send_stream_impl.h
