# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

config("recording_include_config") {
  include_dirs = [
    "//sdk/libs/ffmpeg/include"
  ]
}

rtc_source_set("recording") {
  visibility = [ "*" ]

  sources = [
    "recorder.h",
    "recorder.cc",
  ]
  deps = [
  ]

  public_configs = [
    ":recording_include_config"
  ]

  if (target_os == "win") {
    libs = [
      "//sdk/libs/ffmpeg/lib/avcodec.lib",
      "//sdk/libs/ffmpeg/lib/avdevice.lib",
      "//sdk/libs/ffmpeg/lib/avfilter.lib",
      "//sdk/libs/ffmpeg/lib/avformat.lib",
      "//sdk/libs/ffmpeg/lib/avutil.lib",
      "//sdk/libs/ffmpeg/lib/swresample.lib",
      "//sdk/libs/ffmpeg/lib/swscale.lib",
      "//sdk/libs/ffmpeg/bin/avcodec-58.dll",
      "//sdk/libs/ffmpeg/bin/avdevice-58.dll",
      "//sdk/libs/ffmpeg/bin/avfilter-7.dll",
      "//sdk/libs/ffmpeg/bin/avformat-58.dll",
      "//sdk/libs/ffmpeg/bin/avutil-56.dll",
      "//sdk/libs/ffmpeg/bin/swresample-3.dll",
      "//sdk/libs/ffmpeg/bin/swscale-5.dll",
    ]
  }
}